GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/Sales_Transaction__c.object-meta.xml
<CustomObject>
    <label>Sales Transaction</label>
    <nameField>
        <label>Sales Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>