GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Buyer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Transactions</relationshipLabel>
    <relationshipName>Sales_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>