GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Transactions</relationshipLabel>
    <relationshipName>Sales_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>