GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>When order will arrive</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>