GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Gadget__c.field-meta.xml
<CustomField>
    <fullName>Gadget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gadget</label>
    <referenceTo>Gadget__c</referenceTo>
    <relationshipLabel>Sales Transactions</relationshipLabel>
    <relationshipName>Sales_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>