GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Gadget_Price__c.field-meta.xml
<CustomField>
    <fullName>Gadget_Price__c</fullName>
    <label>Gadget.Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>