GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <description>When order is placed</description>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>