GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/fields/Sales_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Sales_Transaction__c</fullName>
    <label>Sales Transaction</label>
    <required>true</required>
    <type>Date</type>
</CustomField>