GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/validationRules/Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater than zero</errorMessage>
</ValidationRule>