GadgetProject/SalesManagement/force-app/main/default/objects/Sales_Transaction__c/validationRules/SalesTransaction.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesTransaction</fullName>
    <active>true</active>
    <errorConditionFormula>Sales_Transaction__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Sale Date cannot be in the future</errorMessage>
</ValidationRule>